tests/error/misc_errors/conditional_global_shadow2.err
Error: Different types (at $FILE:9:11)
  | 
7 |     if b:
8 |         x = 4
9 |     return x
  |            ^ Variable `x` may refer to different types
  | 
8 |         x = 4
  |         - This is of type `int`

Note: Variable `x` may be shadowing a global extern definition of type `str` on
some branches

Guppy compilation failed due to 1 previous error
